tests/models/struct/unnamed/u128/fail/alias.rs
use dade::model;
#[model]
struct TestModel (
   #[field(alias = "val")]
    u128
);
fn main() {}
